--- a/to-do-list/src/assets/css/to-do-display.css
+++ b/to-do-list/src/assets/css/to-do-display.css
@@ -3,6 +3,9 @@
   text-align: center;
   font-size: 20px;
 }
+body{
+  background-color: rgb(19, 19, 56);
+}
 h1 {
   margin: auto;
   background-color: rgb(48, 48, 59);
@@ -11,11 +14,11 @@ h1 {
   border-bottom-right-radius: 30px;
   border-top-left-radius: 30px;
   color: aliceblue;
+  font-family: "Shantell Sans rev=1";
 }
 .main-div {
-  background-color: rgb(90, 90, 116);
-  height: 100vh;
   margin: auto;
+  width: 100%;
 }
 .upper-container {
   display: flex;
@@ -24,7 +27,7 @@ h1 {
   padding: 20px;
   border-bottom: 2px solid rgb(70, 70, 80);
   height: 45vh;
-  width: 45%;
+  width: 45%; 
   margin: auto;
 }
 .add-list {
@@ -39,6 +42,7 @@ h1 {
 .show-list::-webkit-scrollbar {
   display: none;
 }
+
 input[type="text"] {
   text-align: center;
   border: 2px solid rgb(70, 70, 80);
@@ -82,9 +86,39 @@ input[type="text"] {
   text-align: center;
   border: 2px solid rgb(70, 70, 80);
   margin: 30px;
-  font-size: 20px;
+  font-size: 25px;
   background-color: rgb(48, 48, 59);
   border-radius: 10px;
   font-weight: 500;
   color: aliceblue;
+  font-family: 'Julee', cursive;
+}
+.active:hover{
+  cursor: pointer;
+  -ms-transform: scale(1.2); 
+  -webkit-transform: scale(1.2); 
+  transform: scale(1.2); 
+  background-color: #232c3a;
+  
+}
+.added:hover{
+  cursor: pointer;
+  -ms-transform: scale(1.2); 
+  -webkit-transform: scale(1.2); 
+  transform: scale(1.2); 
+  background-color: #232c3a;
+}
+.completed:hover{
+  cursor: pointer;
+  -ms-transform: scale(1.2); 
+  -webkit-transform: scale(1.2); 
+  transform: scale(1.2); 
+  background-color: #232c3a;
+}
+.remove:hover{
+  cursor: pointer;
+  -ms-transform: scale(1.2); 
+  -webkit-transform: scale(1.2); 
+  transform: scale(1.2); 
+  background-color: #232c3a;
 }
