--- a/react_form/src/assets/css/Form.css
+++ b/react_form/src/assets/css/Form.css
@@ -10,7 +10,6 @@ body{
 .container{
     background-color: rgb(241, 238, 238);
     padding: 20px;
-    
     border: 2px solid rgb(197, 192, 190);
     border-radius: 5px;
 }
@@ -38,7 +37,8 @@ input[type="submit"]
     padding:10px;
     border: 4px solid rgb(197, 192, 190);
     border-radius: 5px;
-    margin:5px;
+    margin:15px;
+    margin-left: 0;
     width: 15%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
