--- a/react_form/src/assets/css/Form.css
+++ b/react_form/src/assets/css/Form.css
@@ -32,8 +32,7 @@ input[type="email"]
     border: 2px solid  rgb(197, 192, 190);
     border-radius: 5px;
 }
-input[type="submit"]
-{
+input[type="submit"]{
     padding:10px;
     border: 4px solid rgb(197, 192, 190);
     border-radius: 5px;
