--- a/to-do-list/src/assets/css/list.css
+++ b/to-do-list/src/assets/css/list.css
@@ -9,12 +9,29 @@
   text-align: center;
   overflow: scroll;
 }
-.list ul{
-    display: inline-block;
-    text-align: left;
-    font-size: 20px;
-    text-transform: capitalize;
+.list ul {
+  display: inline-block;
+  text-align: left;
+  font-size: 20px;
+  text-transform: capitalize;
+  width: 40%;
 }
 .list::-webkit-scrollbar {
   display: none;
+}
+.list-items {
+  display: flex;
+  justify-content: space-around;
+  border-bottom: 1px solid rgb(70, 70, 80);
+}
+.list-element {
+  flex: 8;
+  font-size: 30px;
+  font-family: "Julee", cursive;
+}
+.restore .fas {
+  flex: 2;
+}
+.fas:hover {
+  color: green;
 }
