--- a/e-commerce_app/src/assets/css/menu.css
+++ b/e-commerce_app/src/assets/css/menu.css
@@ -1,7 +1,7 @@
 .dropdown-content{
     position: absolute; 
     float: right; 
-    top: 15%;
+    top: 13.5%;
     left: 80%;
     z-index: 1;
     padding: 10px;
@@ -13,7 +13,9 @@
     list-style: none;
     padding: 10px;
   }
-  
+  .dropdown-content li:hover{
+    background-color: rgb(211, 126, 142);
+  }
   .dropdown-content .login-btn{
     text-align: center;
     width: 130px;
@@ -38,4 +40,8 @@
   .login-btn .link{
     color: rgb(210,31,60);
     text-decoration: none;
+  }
+  .acc-link{
+    text-decoration: none;
+    color: black;
   }
