--- a/e-commerce_app/src/assets/css/product_description.css
+++ b/e-commerce_app/src/assets/css/product_description.css
@@ -61,10 +61,19 @@
 .pop-btn{
     padding: 10px;
     margin: 10px;
-    background-color: rgb(102, 37, 49);
+    background-color: rgb(161, 73, 91);
     color: white;
-    font-weight: 600;
+    font-weight: 500;
     width: 150px;
+}
+.pop-btn .fa-heart-o{
+  font-size: 15px;
+  padding: 5px;
+}
+.pop-btn .fa-heart{
+  font-size: 15px;
+  padding: 5px;
+  color: red;
 }
 #order-btn{
     width: 100%;
@@ -82,4 +91,9 @@
 }
 .pop-btn:hover{
     background-color:  rgb(196, 91, 110);
+}
+.fa-long-arrow-alt-right{
+  color: white;
+  font-size: 20px;
+  padding-left: 10px;
 }
