--- a/e-commerce_app/src/assets/css/product.css
+++ b/e-commerce_app/src/assets/css/product.css
@@ -89,3 +89,31 @@ h1{
 .picons .fa-shopping-cart{
     color: black;
 }
+.category-container{
+    display: flex;
+    margin: 40px;
+}
+.kitchen-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 20vh;
+    margin: 10px;
+    width: 250px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    background-color: rgb(238, 238, 238);
+}
+.kitchen-container img{   
+    width: 200px;
+    height: 70px;
+    border-radius: 30%;
+}
+.kitchen-container h3{
+    margin: 0;
+    padding: 5px;
+    text-align: center;
+}
+.kitchen-container:hover{
+    cursor: pointer;
+}
