--- a/e-commerce_app/src/index.css
+++ b/e-commerce_app/src/index.css
@@ -3,6 +3,7 @@ body {
   font-family: 'Edu NSW ACT Foundation', cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 code {
