--- a/e-commerce_app/src/assets/css/filter_side_bar.css
+++ b/e-commerce_app/src/assets/css/filter_side_bar.css
@@ -1,30 +1,35 @@
+.side-container h4{
+    margin: 0 0 10px 20px;
+    font-size: 20px;   
+    font-weight: 400;
+}
 .sidebar{
     height: 100%;
     width: 220px;
+    border: 2px solid rgb(216, 216, 216);
 }
 li{
     list-style: none;
 }
 .side-parent{
     margin: 0;
-    padding: 20px;
+    padding: 10px;
     font-weight: 700;
     font-size: 15px;
 }
 .side-child1{
-    padding: 20px;  
+    padding: 10px;  
 }
 .side-child2{
-    padding:10px 0px 10px 50px;
+    padding:10px 0px 10px 10px; 
 }
 .filter-type{
     padding: 10px;
-    margin: 20px 10px 40px 10px;
-    border: 2px solid rgb(10, 20, 10);
+    margin: 10px 10px 10px 10px;
 }
 .side-child1 label{
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 300;
     color:  rgb(210,31,60);
 }
 .side-child2 label{
@@ -37,4 +42,7 @@ li{
 }
 .side-child2:hover{
     background-color: rgb(214, 180, 136);
+}
+.clink , .blink{
+    margin-right: 10px;
 }
