--- a/e-commerce_app/src/assets/css/product.css
+++ b/e-commerce_app/src/assets/css/product.css
@@ -102,12 +102,12 @@ h1{
     margin: 10px;
     width: 250px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    background-color: rgb(238, 238, 238);
+    background-color: rgb(236, 236, 236);
 }
 .kitchen-container img{   
     width: 200px;
     height: 70px;
-    border-radius: 30%;
+    border-radius: 50%; 
 }
 .kitchen-container h3{
     margin: 0;
@@ -116,4 +116,37 @@ h1{
 }
 .kitchen-container:hover{
     cursor: pointer;
+}
+.active-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 20vh;
+    margin: 10px;
+    width: 250px;
+    scale: 0.8;
+    background-color: rgb(238, 238, 238);
+}
+.active-container img{   
+    width: 200px;
+    height: 70px;
+    /* border-radius: 30%; */
+}
+.active-container h3{
+    margin: 0;
+    padding: 5px;
+    text-align: center;
+}
+.active-container:hover{
+    cursor: pointer;
+}
+.show-number{
+    text-align: center;
+    /* margin-left: 20px; */
+    font-size: 20px;
+    font-weight: 600;
+}
+.show-number .length{
+    color: gray;
 }
