--- a/e-commerce_app/src/assets/css/footer.css
+++ b/e-commerce_app/src/assets/css/footer.css
@@ -1,16 +1,18 @@
 .footer-container {
   margin-top: 80px;
-  margin-bottom: 80px;
   width: 100%;
-  padding: 30px;
-  background-color: black;
-  color: white;
+  padding: 30px; 
+  background-color: rgb(218, 210, 210);
+  color: rgb(48, 31, 31);
 }
 .f-content {
   display: flex;
 }
 .f-brands {
   width: 25%;
+}
+.f-content li{
+  list-style: none;
 }
 .f-products {
   width: 25%;
@@ -27,7 +29,7 @@
   padding: 20px 20px 20px 10px;
 }
 .f-child {
-  color: rgb(138, 135, 135);
+  color: rgb(44, 43, 43);
   font-size: 18px;
   font-weight: 300;
   padding: 10px;
